scrollbar, spinner & sidebar fix

--- a/frontend_sanity/src/index.css
+++ b/frontend_sanity/src/index.css
@@ -7,3 +7,14 @@
     font-family: 'Lato', sans-serif;
   }
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
